--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<h1>Sports</h1>
+<style>
+  .smaller-image{
+    width:100px;
+  }
+</style>
+ <h1>Sports</h1>
 
 <p>My favorite sport is basketball, but I also do track.. I like both of these sports because it is fun and I am good at. It is fun to be on these spoarts team because you can see all you friends and compete.</p>
 
